# RustProject

./: .gitignore  readme.md
docs/: 12aout.md  12june.md  16june.md  28june rencontre.txt  db.md  jul15.md  messaging.md  references.md  rerferences.md  rust_review.txt  todo.md
docs/diagrams/: action.puml  architectures.puml  component.puml  module.puml  module_coral.puml  module_coral_commons.puml  module_coraline.puml  module_projects.puml  module_realm_commons.puml  module_teal.puml
projects/: .env  RustProject.sln  docker-compose.yml
projects/Layer - Util/teal/: .gitignore  Cargo.toml  build.rs  readme.md
projects/Layer - Util/teal/src/: lib.rs
projects/Layer - Util/teal/src/messages/: heartbeat.rs  mod.rs  ping.rs  raft.rs
projects/Layer - Util/teal/src/net/: client.rs  handler.rs  handlers.rs  message.rs  mod.rs  server.rs
projects/Layer - Util/teal/src/protos/: heartbeat.proto  mod.rs  ping.proto  raft.proto
projects/Layer - Util/teal/src/raft/: heartbeat_handler.rs  mod.rs  raft.rs
projects/Layer - Util/teal/tests/: test_net.rs
projects/Layer - Util/teal/tests/common/: mod.rs  net.rs  test_client.rs  test_server.rs
projects/Layer 0 - Domain/coral-commons/: Cargo.toml  build.rs  readme.md
projects/Layer 0 - Domain/coral-commons/src/: lib.rs  message_ids.rs  messages.rs  ping.rs
projects/Layer 0 - Domain/coral-commons/src/proto/: ping.proto  user.proto
projects/Layer 0 - Domain/coral-commons/src/protos/: Match.proto  MatchResult.proto  RequestMatch.proto  SetInQueue.proto  SetQueue.proto  messages.proto  mod.rs  models.proto  objects.proto
projects/Layer 0 - Domain/coral-commons/src/red/: mod.rs  red_match.rs
projects/Layer 0 - Domain/eevee/: Cargo.toml
projects/Layer 0 - Domain/realm-commons/: Cargo.toml  build.rs  readme.md
projects/Layer 0 - Domain/realm-commons/src/: lib.rs  message_ids.rs
projects/Layer 0 - Domain/realm-commons/src/protos/: c2s.proto  mod.rs  s2c.proto
projects/Layer 0 - Domain/realm-commons/src/protos/client/: CreateLobby.proto  Identify.proto  JoinLobby.proto  QuitLobby.proto  SendInvitationToLobby.proto  messages.rs  mod.rs
projects/Layer 0 - Domain/realm-commons/src/protos/models/: Lobby.proto  Player.proto  User.proto  mod.rs
projects/Layer 0 - Domain/realm-commons/src/protos/server/: BroadcastPlayerListInLobby.proto  CreatedLobby.proto  ListLobbies.proto  RelayInvitationToLobby.proto  messages.rs  mod.rs
projects/Layer 0 - Domain/realm-commons/src/red/: mod.rs  red_lobby.rs  red_player.rs
projects/Layer 2 - Application/Spark/: Dockerfile  Program.cs  Spark.csproj  Spark.http
projects/Layer 2 - Application/Spark/Controllers/: LobbyController.cs  PlayerController.cs  TelemetryController.cs
projects/Layer 2 - Application/Spark/Properties/: launchSettings.json
projects/Layer 2 - Application/Spark/Protogen/Coral/: Match.cs  MatchResult.cs  Messages.cs  Models.cs  Objects.cs  RequestMatch.cs  RequestMath.cs  SetInQueue.cs  SetQueue.cs
projects/Layer 2 - Application/Spark/Protogen/Realm/: C2S.cs  CreateLobby.cs  JoinLobby.cs  S2C.cs  SendInvitationToLobby.cs
projects/Layer 2 - Application/Spark/Repositories/: GameRepository.cs  LobbyRepository.cs  MatchRepository.cs  PlayerRepository.cs
projects/Layer 2 - Application/coral/: .env.dev  .env.docker  Cargo.toml  Dockerfile  readme.md
projects/Layer 2 - Application/coral/src/: main.rs
projects/Layer 2 - Application/coral/src/api/: api_lobbies.rs  api_matches.rs  api_players.rs  mod.rs
projects/Layer 2 - Application/coral/src/handlers/: create_lobby_handler.rs  identify_handler.rs  match_result_handler.rs  mod.rs  ping_handler.rs  raftheartbeat_handler.rs  set_queue_handler.rs
projects/Layer 2 - Application/coraline/: .env.dev  .env.docker  .env2  Cargo.toml  Dockerfile  readme.md
projects/Layer 2 - Application/coraline/src/: main.rs
projects/Layer 2 - Application/coraline/src/api/: api.rs  api_lobby.rs  api_match.rs  api_player.rs  api_queue.rs  mod.rs
projects/Layer 2 - Application/coraline/src/handlers/: created_lobby_handler.rs  match_handler.rs  mod.rs  ping_handler.rs  set_queue_response_handler.rs
projects/Layer 2 - Application/orchestrator/: readme.md
projects/Layer 2 - Application/realm/: Cargo.toml  Dockerfile  readme.md
projects/Layer 2 - Application/realm/src/: main.rs
projects/Layer 2 - Application/realm/src/handlers/: mod.rs  ping_handler.rs  realm_handlers.rs
projects/Layer 2 - Application/spark/: readme.md
