[package]
name = "teal"
version = "0.1.0"
edition = "2021"
description = "Utility Library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.4.0"
redis = "*"
tokio = {version = "*", features = ["full"]}
tracing = "*"

serde = { version = "*", features = ["derive"] }
syn = "*"
quote = "*"
serde_bytes = "*"
bincode = "*"
derive-new = "0.6.0"
bytes = "1"

async-trait = "0.1.79"
futures = "*"

