[package]
name = "teal"
version = "0.1.0"
edition = "2021"
description = "Utility Library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "*"
tracing = "*"
tokio = { version = "*", features = ["full"] }
thiserror = "*"
mockall = "0.12.1"

serde = { version = "*", features = ["derive"] }
serde_bytes = "*"
syn = "*"
quote = "*"
bincode = "*"
derive-new = "0.6.0"
bytes = "1"

async-trait = "0.1.79"
futures = "*"

prost = "*"
tonic = "*"
prost-reflect = { version = "*", features = ["serde", "derive", "text-format"] }
once_cell = "1.9.0"

[build-dependencies]
tonic-build = "*"
prost-build = "0.13.0"
prost-reflect = { version = "*", features = ["serde", "derive", "text-format"] }
prost-reflect-build = "*"

