[package]
name = "coral-commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teal = { path = "../../Layer - Util/teal" }
tonic = "*"
bincode = "*"
async-trait = "0.1.79"


[build-dependencies]
tonic-build = "*"
