[package]
name = "realm-commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teal = { path = "../../Layer - Util/teal" }

# Protobuf
tonic = "*"
prost = "*"
prost-reflect = { version = "*", features = ["serde", "derive", "text-format"] }
once_cell = "1.9.0"
redis = "*"

[build-dependencies]
prost-build = "0.13.0"
prost-reflect-build = "*"
