[package]
name = "realm-commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teal = { path = "../../Layer - Util/teal" }
redis = "*"
serde = "*"
once_cell = "1.9.0"

rocket = { version = "=0.5.0", default-features = false, features = ["json"] }
rocket_okapi = { version = "*", features = ["swagger", "rapidoc"] }
schemars = "*"

# Protobuf
tonic = "*"
prost = "*"
prost-reflect = { version = "*", features = ["serde", "derive", "text-format"] }


[build-dependencies]
prost-build = "0.13.0"
prost-reflect-build = "*"
